<resources>
    <string name="app_name">SIPTATIF</string>
    <string name="judul">SIPTATIF</string>
    <string name="keterangan">Sistem Informasi Pendaftaran Tugas Akhir Teknik Informatika</string>
    <string name="btn1">Selengkapnya</string>
    <string name="perintahLogin">Silakan Login Disini</string>
    <string name="isiEmail">Email</string>
    <string name="isiPassword">Password</string>
    <string name="lupaPw">Lupa Password?</string>
    <string name="btnLogin">Login</string>
    <string name="pertanyaanAkun">Belum ada akun?</string>
    <string name="perintahDaftar">Daftar Di sini</string>
    <string name="kepanjanganJudul">Sistem Informasi Pendaftaran Tugas Akhir
Teknik Informatika</string>
    <string name="keteranganApp">SIPTATIF ini merupakan sebuah aplikasi yang digunakan untuk pendaftaran Tugas Akhir Mahasiswa Teknik Informatika.</string>
    <string name="btn_kembali">Kembali</string>
    <string name="perintahRegis">Silakan Register</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="alamatEmail">Email Address</string>
    <string name="konfirmasiPW">Konfirmasi Password</string>
    <string name="btnRegister">Buat Akun</string>
    <string name="btnResetLink">Send Password Reset Link</string>
    <string name="btnKembaliLogin">Kembali Login</string>
    <string name="halLupaPW">Lupa Password</string>
    <string name="infoEmail">We have emailed your password reset link</string>
    <string name="resetPw">Reset Password</string>
    <string name="pwBaru">Password Baru</string>
    <string name="konfirmPwBaru">Konfirmasi Password Baru</string>
    <string name="btnResetPw">Reset Password</string>
    <string name="home">Beranda</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="dospem">Dosen
        Pembimbing</string>
    <string name="statuspendaftaran">Status Pendaftaran</string>
    <string name="fotoProfil">Profil</string>
    <string name="menu">Menu</string>
    <string name="logo">logo kampus</string>
    <string name="dataPendaftaran">Data Pendaftaran</string>
    <string name="pendaftaranMhs">Pendaftaran Mahasiswa</string>
    <string name="tgl">Tanggal</string>
    <string name="judulTa">Judul</string>
    <string name="status">Status</string>
    <string name="jadwal">02-04-2024</string>
    <string name="judulTAmhs">Perkembangan AI</string>
    <string name="statusTA">Menunggu</string>

    <string-array name="spinner_array">
        <item>Mahasiswa</item>
        <item>Logout</item>
    </string-array>
</resources>