<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_activity"
    android:background="@color/purple">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/judul"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:text="@string/keterangan"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:background="@drawable/shape_button"
        android:text="@string/btn1"
        android:id="@+id/btn_selengkapnya"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginTop="230dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:padding="10sp"
        android:background="@color/grey">

        <TextView 
            android:id="@+id/login" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="0sp"
            android:paddingHorizontal="65dp"
            android:text="@string/perintahRegis"
            android:textSize="20sp"
            />

        <View
            android:layout_width="210dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="35dp"
            android:background="#000000"
            android:layout_marginTop="5sp"
            />
        
        <EditText
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:hint="@string/nama"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="35dp"
            android:paddingHorizontal="20dp"
            android:background="@color/white"
            android:id="@+id/edt_isiNama"
            />

        <EditText
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:hint="@string/nim"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="35dp"
            android:paddingHorizontal="20dp"
            android:background="@color/white"
            android:id="@+id/edt_isiNIM"
            />

        <EditText
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:hint="@string/alamatEmail"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="35dp"
            android:paddingHorizontal="20dp"
            android:background="@color/white"
            android:id="@+id/edt_alamatEmail"
            />

        <EditText
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:hint="@string/isiPassword"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="35dp"
            android:paddingHorizontal="20dp"
            android:background="@color/white"
            android:id="@+id/edt_buatPw"
            />

        <EditText
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:hint="@string/konfirmasiPW"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="35dp"
            android:paddingHorizontal="20dp"
            android:background="@color/white"
            android:id="@+id/edt_konfirmPw"
            />

        <Button
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:background="@drawable/shape_button2"
            android:text="@string/btnRegister"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_register"
            />
    </LinearLayout>

</RelativeLayout>