<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reset_password"
    android:background="@color/purple">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/judul"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:text="@string/keterangan"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:background="@drawable/shape_button"
        android:text="@string/btn1"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginTop="230dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:padding="10sp"
        android:background="@color/grey">

        <TextView
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="0sp"
            android:paddingHorizontal="57dp"
            android:text="@string/resetPw"
            android:textSize="22sp"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:hint="@string/pwBaru"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="35sp"
            android:padding="15sp"
            android:background="@color/white"
            android:id="@+id/edt_pwBaru"
            />

        <EditText
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:hint="@string/konfirmPwBaru"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="35sp"
            android:padding="15sp"
            android:background="@color/white"
            android:id="@+id/edt_konfirmPwBaru"
            />

        <Button
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="62dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_button2"
            android:text="@string/btnResetPw"
            android:textColor="@color/white"
            />
    </LinearLayout>

</RelativeLayout>